Changed variable names for clarity

--- a/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
+++ b/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b979f58c-0389-4e76-be7f-79366e5189ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/camo/anaconda3/envs/nf1_analysis/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pandas.plotting import scatter_matrix\n",
@@ -120,8 +129,8 @@
    "outputs": [],
    "source": [
     "min_class_samps_size = min(featdf['genotype_label'].value_counts().values)\n",
-    "strat_featdf = featdf.groupby('genotype_label', group_keys=False).apply(lambda x: x.sample(n=min_class_samps_size, random_state=rnd_val))\n",
-    "traindf, testdf = train_test_split(strat_featdf, random_state=rnd_val, shuffle=True, train_size=0.9)"
+    "dsamp_featdf = featdf.groupby('genotype_label', group_keys=False).apply(lambda x: x.sample(n=min_class_samps_size, random_state=rnd_val))\n",
+    "traindf, testdf = train_test_split(dsamp_featdf, random_state=rnd_val, shuffle=True, train_size=0.9)"
    ]
   },
   {
