Added changes from Daves comments

--- a/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
+++ b/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
@@ -39,7 +39,6 @@
     "from sklearn.preprocessing import LabelBinarizer, StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import KFold, train_test_split\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.decomposition import PCA\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "40f89180-8345-46f7-b453-1b346001f8bb",
    "metadata": {},
    "outputs": [],
@@ -210,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "fdae46a5-eee6-4ed7-99e3-a1c49eb63c12",
    "metadata": {
     "tags": []
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d7827c06-e014-46df-bc8d-102f6c1f92ec",
    "metadata": {},
    "outputs": [
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7c473493-890a-447e-88ae-f5043fa8e15c",
    "metadata": {
     "tags": []
@@ -274,7 +273,7 @@
        "UMAP(random_state=0, tqdm_kwds={'bar_format': '{desc}: {percentage:3.0f}%| {bar} {n_fmt}/{total_fmt} [{elapsed}]', 'desc': 'Epochs completed', 'disable': True})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ddd71b16-085b-4aa5-91dd-aefc299d2639",
    "metadata": {
     "tags": []
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "544f6632-619b-4fd1-8595-592eab7b503e",
    "metadata": {},
    "outputs": [],
@@ -367,27 +366,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "c725bcd0-7283-4a37-b091-529c5baac417",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Returns the naive accuracy:\n",
-    "def naive_acc(labels):\n",
-    "    \"\"\"\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    labels\n",
-    "        The genotype labels.\n",
+    "# Naive Model:\n",
+    "class naive_model:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def score(self, labels):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        labels\n",
+    "            The genotype labels.\n",
     "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "        A naive accuracy (baseline) for the given labels.\n",
-    "    \"\"\"\n",
-    "    naive_pred = rng.integers(low=0, high=2, size=labels.shape[0])\n",
-    "    naive_acc = accuracy_score(naive_pred,labels)\n",
-    "    return naive_acc"
+    "        Returns\n",
+    "        -------\n",
+    "        float\n",
+    "            A naive accuracy (baseline accuracy) for the given labels without considering any features.\n",
+    "        \"\"\"\n",
+    "        naive_pred = rng.integers(low=0, high=2, size=labels.shape[0])\n",
+    "        naive_acc = accuracy_score(naive_pred,labels)\n",
+    "        return naive_acc"
    ]
   },
   {
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "221744e2-a564-41fe-a1c3-4d5691f3c963",
    "metadata": {},
    "outputs": [],
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "4ac2178a-b0bc-4792-80cb-a6555fc0e078",
    "metadata": {},
    "outputs": [],
@@ -447,7 +450,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
+   "id": "e4a5b103-b71a-4f7a-91dd-6ab68ae3fb52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_lrc = naive_model() # Naive results for the logistic regression validation data\n",
+    "naive_acc = naive_lrc.score(lrc_results['labels']) # Naive accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "70c8a6fa-cb82-4496-a993-53f7622a4481",
    "metadata": {},
    "outputs": [
@@ -456,18 +470,18 @@
      "output_type": "stream",
      "text": [
       "Validation model accuracy = 0.88\n",
-      "Naive accuracy = 0.52\n"
+      "Naive accuracy = 0.56\n"
      ]
     }
    ],
    "source": [
     "print(f\"Validation model accuracy = {lrc_results['acc']}\")\n",
-    "print(f\"Naive accuracy = {naive_acc(lrc_results['preds'])}\")"
+    "print(f\"Naive accuracy = {naive_acc}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ca805c30-b8bf-4044-b8a1-694b8d5855ec",
    "metadata": {},
    "outputs": [
@@ -488,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "794f1387-c2ea-4fc9-9ea5-406f7a35be39",
    "metadata": {},
    "outputs": [
@@ -515,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "2d3ce47d-b1e5-4ba5-8e18-ce2193d9ccb6",
    "metadata": {},
    "outputs": [],
@@ -523,6 +537,17 @@
     "adab = AdaBoostClassifier(n_estimators=100, random_state=rnd_val)\n",
     "\n",
     "adab_results = kcross_val(adab,train_feat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "88bbf205-f196-4ccd-923a-29d53f366672",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_adab = naive_model() # Naive model for the Adaboost validation data\n",
+    "naive_acc = naive_adab.score(adab_results['labels']) # Naive accuracy"
    ]
   },
   {
@@ -542,7 +567,7 @@
    ],
    "source": [
     "print(f\"Model Validation accuracy = {adab_results['acc']}\")\n",
-    "print(f\"Naive accuracy = {naive_acc(adab_results['preds'])}\")"
+    "print(f\"Naive accuracy = {naive_acc}\")"
    ]
   },
   {
