Added remaining changes from comments

--- a/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
+++ b/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
@@ -346,7 +346,7 @@
     "    cv = KFold(n_splits = splits, random_state=rnd_val, shuffle=True)\n",
     "    max_acc = 0 # Keep track of the maximum accuracy\n",
     "\n",
-    "    for idx, (train_idx, val_idx) in enumerate(cv.split(X=feat)): # iterates through index splits\n",
+    "    for train_idx, val_idx in cv.split(X=feat): # iterates through index splits\n",
     "        yval = feat[val_idx,-1].astype(np.int64) # Validation labels converted to ints\n",
     "        ytrain = feat[train_idx,-1].astype(np.int64) # Training labels converted to ints\n",
     "        Xval = feat[val_idx,0:-1] # Validation features\n",
@@ -425,7 +425,7 @@
     "    fig, ax = plt.subplots(figsize=(5,5), dpi=100)\n",
     "    display = ConfusionMatrixDisplay(cm, display_labels=np.unique(model_res['labels']))\n",
     "    ax.set(title=mat_title)\n",
-    "    display.plot(ax=ax);"
+    "    display.plot(ax=ax)"
    ]
   },
   {
