Added note about accuracies

--- a/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
+++ b/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e529ea4f-508a-446a-ae18-d660cbc186f9",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "This notebook did not stratify samples. Accuracies may not be reflective of class distributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e948c896-effc-4451-8297-d3cb0213bb24",
    "metadata": {},
    "source": [
@@ -335,6 +344,8 @@
     "        The model to be trained and evaluated.\n",
     "    feat : Pandas Dataframe\n",
     "        The preprocessed dataframe with features and labels.\n",
+    "    splits: int\n",
+    "        The number of splits for k cross validation\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -408,6 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display Confusion matrix\n",
     "def conf_mat(model_res, mat_title='Confusion Matrix'):\n",
     "    \"\"\"\n",
     "    Parameters\n",
@@ -415,11 +427,9 @@
     "    model_res : dict\n",
     "        A dictionary containing: Best validation accuracy, Best model, Prediction of best model, Validation set labels.\n",
     "        \"Best\" corresponds to the greatest validation accuracy.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    dict\n",
-    "        A naive accuracy (baseline) for the given labels.\n",
+    "    \n",
+    "    mat_title: str\n",
+    "        The title of the confusion matrix.\n",
     "    \"\"\"\n",
     "    cm = confusion_matrix(model_res['labels'],model_res['preds'])\n",
     "    fig, ax = plt.subplots(figsize=(5,5), dpi=100)\n",
