--- a/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
+++ b/nf1_cellprofiler_classifier_fs_all_cellprofiler_all_feat_perfect.ipynb
@@ -384,6 +384,10 @@
    "source": [
     "# Naive Model:\n",
     "class naive_model:\n",
+    "    \"\"\"\n",
+    "    A naive model, which chosses a random class to generate predictions.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def __init__(self):\n",
     "        pass\n",
     "    \n",
@@ -638,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
