Added some of Mikes suggestions

--- a/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
+++ b/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
@@ -40,6 +40,7 @@
     "import pathlib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from collections import defaultdict\n",
     "\n",
     "rel_root = pathlib.Path(\"..\")\n",
     "sys.path.append(f'{rel_root}/utils')\n",
@@ -58,103 +59,45 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bcf3b51e-305d-4972-a5bd-06d4daf7a8df",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "filename = 'nf1_sc_all_cellprofiler.csv.gz'\n",
-    "po1 = ppu.preprocess_data(1, filename, rel_root, ['Metadata_genotype'])\n",
-    "po2 = ppu.preprocess_data(2, filename, rel_root, ['Metadata_genotype'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "3b183180-318d-4801-8d7c-e6553236c5b8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "rnd_val = po1.rnd_val # Random value for all seeds\n",
+    "rnd_val = 0 # Random value for all seeds\n",
     "rng = np.random.default_rng(seed=rnd_val) # random number generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8d023f45-7082-4580-8b66-553e702b23cd",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plate1df = po1.get_ml_df()\n",
-    "plate2df = po2.get_ml_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "083e127d-e3ad-450f-bb43-e15b621ebf0b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plate1df.drop(['Cytoplasm_Number_Object_Number'], axis=1, inplace=True)\n",
-    "plate2df.drop(['Cytoplasm_Number_Object_Number'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e645ede3-4a0e-4850-8ce1-0475e5217e61",
+   "execution_count": 3,
+   "id": "c00fd174-2abc-4feb-999f-15a9b094296d",
    "metadata": {},
-   "source": [
-    "## Remove outliers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "486e0adc-d66a-4f81-a46a-3b1f32fde175",
-   "metadata": {
-    "tags": []
-   },
    "outputs": [],
    "source": [
-    "isof1 = IsolationForest(random_state = rnd_val)\n",
-    "out_preds1 = isof1.fit_predict(plate1df.drop(columns=['Metadata_genotype']))\n",
-    "ind1 = np.nonzero(out_preds1 == 1)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "99b32b43-8026-4f5a-8027-9b90e83a326d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "isof2 = IsolationForest(random_state = rnd_val)\n",
-    "out_preds2 = isof2.fit_predict(plate2df.drop(columns=['Metadata_genotype']))\n",
-    "ind2 = np.nonzero(out_preds2 == 1)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6d44c9d6-e10b-4c79-a31f-fb2a68993d9f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plate1df = plate1df.iloc[ind1]\n",
-    "plate2df = plate2df.iloc[ind2]"
+    "filename = 'nf1_sc_all_cellprofiler.csv.gz'\n",
+    "plates = [1,2]\n",
+    "platesdf = [] # Will hold plate dataframes\n",
+    "\n",
+    "for plate in plates:\n",
+    "    # Initializes the preprocessing class\n",
+    "    po = ppu.Preprocess_data(plate=plate, filename=filename, rel_root=rel_root,\n",
+    "                          kept_meta_columns=['Metadata_genotype'])\n",
+    "    \n",
+    "    # Gets the dataframe after removing metadata columns, \n",
+    "    # except for the 'Metadata_genotype' column specified above\n",
+    "    platedf = po.get_ml_df()\n",
+    "    platedf.drop(['Cytoplasm_Number_Object_Number'], axis=1, inplace=True)\n",
+    "    \n",
+    "    # Use isolation forest to select inliers:\n",
+    "    isof = IsolationForest(random_state = rnd_val) \n",
+    "    out_preds = isof.fit_predict(platedf.drop(columns=['Metadata_genotype']))\n",
+    "    ind = np.nonzero(out_preds == 1)[0] # Select inliers\n",
+    "    \n",
+    "    # Select inlier samples:\n",
+    "    platesdf.append(platedf.iloc[ind])\n",
+    "    "
    ]
   },
   {
@@ -167,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "663b881e-7543-4974-8aba-ca3c0d5d28ec",
    "metadata": {
     "tags": []
@@ -178,54 +121,181 @@
      "output_type": "stream",
      "text": [
       "/home/camo/anaconda3/envs/nf1_analysis/lib/python3.9/site-packages/scipy/stats/_stats_py.py:3895: ConstantInputWarning: Each of the input arrays is constant;the F statistic is not defined or infinite\n",
-      "  warnings.warn(stats.ConstantInputWarning(msg))\n"
+      "  warnings.warn(stats.ConstantInputWarning(msg))\n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:161: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['plate'] = [str(i+1)]*len(df)\n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:162: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['group'] = df['Metadata_genotype'] + df['plate']\n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:163: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.drop(columns=['Metadata_genotype','plate'], inplace=True) # Remove unnecessary columns for testing\n"
      ]
     }
    ],
    "source": [
+    "#gtypes = ['Null','WT'] # The 2 types of genotypes\n",
     "test = sp.posthoc_scheffe\n",
     "# Pass the plates dataframes in order, so that genotypes are suffixed corretly (eg. WT1WT2)\n",
     "# Plates are 1 indexed\n",
-    "res_test = au.sig_test(test, [plate1df, plate2df])"
+    "# res_test = au.sig_test(test, platesdf)\n",
+    "st = au.Sig_testing(platesdf)\n",
+    "anova_feats, sig_anova_pvals = st.anova_test()\n",
+    "res_test = st.posthoc_test(anova_feats, sig_anova_pvals, test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "0aedf56e-950b-4bfd-8909-6d4740d1e024",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "sig_groups = au.get_columns(res_test['sig_feat_phoc'])"
+    "# Returns a dictionary of genotype pairs containing the significant column names\n",
+    "# being analyzed\n",
+    "sig_groups = st.get_columns(res_test['sig_feat_phoc'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "5c9c6eb1-50f1-457b-bbc9-a257e4b98777",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tot_columns = len(platesdf[0].columns)\n",
+    "sig_groupsdf = pd.DataFrame(list({grp: len(tot) for grp, tot in sig_groups.items()}.items()),\n",
+    "                            columns=['genotype', 'number_of_significant_columns'])\n",
+    "sig_groupsdf['proportion_of_significant_columns'] = sig_groupsdf['number_of_significant_columns'] / tot_columns\n",
+    "sig_groupsdf = sig_groupsdf.round({'proportion_of_significant_columns': 2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c64f46b6-36a6-4028-bed5-b588f4c7d705",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "out_file = pathlib.Path('data/plate_1_2_genotype_signifance.tsv')\n",
+    "sig_groupsdf.to_csv(out_file, sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "06172140-577a-4ab3-8ff9-d82e929919d2",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In group WT1Null1: 33.92% of columns are significant\n",
-      "In group WT1WT2: 52.23% of columns are significant\n",
-      "In group WT1Null2: 55.92% of columns are significant\n",
-      "In group Null1WT2: 62.97% of columns are significant\n",
-      "In group Null1Null2: 67.51% of columns are significant\n",
-      "In group WT2Null2: 66.67% of columns are significant\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genotype</th>\n",
+       "      <th>number_of_significant_columns</th>\n",
+       "      <th>proportion_of_significant_columns</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WT1Null1</td>\n",
+       "      <td>404</td>\n",
+       "      <td>0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WT1WT2</td>\n",
+       "      <td>622</td>\n",
+       "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WT1Null2</td>\n",
+       "      <td>666</td>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Null1WT2</td>\n",
+       "      <td>750</td>\n",
+       "      <td>0.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Null1Null2</td>\n",
+       "      <td>804</td>\n",
+       "      <td>0.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>WT2Null2</td>\n",
+       "      <td>794</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     genotype  number_of_significant_columns   \n",
+       "0    WT1Null1                            404  \\\n",
+       "1      WT1WT2                            622   \n",
+       "2    WT1Null2                            666   \n",
+       "3    Null1WT2                            750   \n",
+       "4  Null1Null2                            804   \n",
+       "5    WT2Null2                            794   \n",
+       "\n",
+       "   proportion_of_significant_columns  \n",
+       "0                               0.34  \n",
+       "1                               0.52  \n",
+       "2                               0.56  \n",
+       "3                               0.63  \n",
+       "4                               0.68  \n",
+       "5                               0.67  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tot_columns = len(plate1df.columns)\n",
-    "for group, cols in sig_groups.items():\n",
-    "    print(f'In group {group}: {(len(cols) / tot_columns)*100:.2f}% of columns are significant')"
+    "sig_groupsdf"
    ]
   }
  ],
