--- a/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
+++ b/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
@@ -5,7 +5,7 @@
    "id": "9674ee00-3f77-4b07-90cf-0e4dc9b3d77c",
    "metadata": {},
    "source": [
-    "# Obnibus and post hoc testing"
+    "# Obnibus and post hoc testing with Anova and scheffe's test"
    ]
   },
   {
@@ -37,23 +37,14 @@
     "import sys\n",
     "from sklearn.ensemble import IsolationForest\n",
     "import scikit_posthocs as sp\n",
-    "import pathlib\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "\n",
-    "rel_root = pathlib.Path(\"..\")\n",
-    "sys.path.append(f'{rel_root}/utils')\n",
+    "sys.path.append(\"../utils\")\n",
     "import analysis_utils as au\n",
     "import preprocess_utils as ppu"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7820f4b0-0557-4aa2-ab83-f867365f7d19",
-   "metadata": {},
-   "source": [
-    "# Preprocess data using preprocess utils"
    ]
   },
   {
@@ -70,24 +61,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7820f4b0-0557-4aa2-ab83-f867365f7d19",
+   "metadata": {},
+   "source": [
+    "# Preprocess data using preprocess utils"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ff07e65a-3c7b-4495-a49c-ebbb8683843a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_dir = Path.cwd()\n",
+    "print(current_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c00fd174-2abc-4feb-999f-15a9b094296d",
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'nf1_sc_all_cellprofiler.csv.gz'\n",
-    "plates = [1,2]\n",
-    "platesdf = [] # Will hold plate dataframes\n",
+    "base_path = Path(\"../nf1_benchmark_repo/4_processing_features/data\")\n",
+    "ending_path = Path(\"CellProfiler/nf1_sc_all_cellprofiler.csv.gz\")\n",
     "\n",
-    "for plate in plates:\n",
+    "plates = {}\n",
+    "\n",
+    "plates['1'], plates['2'] = {\"path\": base_path / \"Plate1\" / ending_path}, {\"path\": base_path / \"Plate2\" / ending_path}\n",
+    "\n",
+    "for plate, vals in plates.items():\n",
     "    # Initializes the preprocessing class\n",
-    "    po = ppu.Preprocess_data(plate=plate, filename=filename, rel_root=rel_root,\n",
-    "                          kept_meta_columns=['Metadata_genotype'])\n",
+    "    po = ppu.Preprocess_data(path=vals['path'])\n",
     "    \n",
     "    # Gets the dataframe after removing metadata columns, \n",
     "    # except for the 'Metadata_genotype' column specified above\n",
-    "    platedf = po.get_ml_df()\n",
+    "    platedf = po.remove_meta(po.df, kept_meta_columns=['Metadata_genotype'])\n",
     "    platedf.drop(['Cytoplasm_Number_Object_Number'], axis=1, inplace=True)\n",
     "    \n",
     "    # Use isolation forest to select inliers:\n",
@@ -96,8 +119,9 @@
     "    ind = np.nonzero(out_preds == 1)[0] # Select inliers\n",
     "    \n",
     "    # Select inlier samples:\n",
-    "    platesdf.append(platedf.iloc[ind])\n",
-    "    "
+    "    plates[plate]['df'] = platedf.iloc[ind]\n",
+    "    \n",
+    "platesdf = [plates[key]['df'] for key in plates]"
    ]
   },
   {
@@ -110,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "663b881e-7543-4974-8aba-ca3c0d5d28ec",
    "metadata": {
     "tags": []
@@ -122,19 +146,19 @@
      "text": [
       "/home/camo/anaconda3/envs/nf1_analysis/lib/python3.9/site-packages/scipy/stats/_stats_py.py:3895: ConstantInputWarning: Each of the input arrays is constant;the F statistic is not defined or infinite\n",
       "  warnings.warn(stats.ConstantInputWarning(msg))\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:161: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:178: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['plate'] = [str(i+1)]*len(df)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:162: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:179: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['group'] = df['Metadata_genotype'] + df['plate']\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:163: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:180: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -155,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0aedf56e-950b-4bfd-8909-6d4740d1e024",
    "metadata": {
     "tags": []
@@ -169,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5c9c6eb1-50f1-457b-bbc9-a257e4b98777",
    "metadata": {
     "tags": []
@@ -185,117 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c64f46b6-36a6-4028-bed5-b588f4c7d705",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "out_file = pathlib.Path('data/plate_1_2_genotype_signifance.tsv')\n",
+    "out_file = Path('data/plate_1_2_genotype_signifance.tsv')\n",
+    "\n",
+    "if not out_file.parent.is_dir():\n",
+    "    out_file.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "sig_groupsdf.to_csv(out_file, sep='\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "06172140-577a-4ab3-8ff9-d82e929919d2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>genotype</th>\n",
-       "      <th>number_of_significant_columns</th>\n",
-       "      <th>proportion_of_significant_columns</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>WT1Null1</td>\n",
-       "      <td>404</td>\n",
-       "      <td>0.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>WT1WT2</td>\n",
-       "      <td>622</td>\n",
-       "      <td>0.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>WT1Null2</td>\n",
-       "      <td>666</td>\n",
-       "      <td>0.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Null1WT2</td>\n",
-       "      <td>750</td>\n",
-       "      <td>0.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Null1Null2</td>\n",
-       "      <td>804</td>\n",
-       "      <td>0.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>WT2Null2</td>\n",
-       "      <td>794</td>\n",
-       "      <td>0.67</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     genotype  number_of_significant_columns   \n",
-       "0    WT1Null1                            404  \\\n",
-       "1      WT1WT2                            622   \n",
-       "2    WT1Null2                            666   \n",
-       "3    Null1WT2                            750   \n",
-       "4  Null1Null2                            804   \n",
-       "5    WT2Null2                            794   \n",
-       "\n",
-       "   proportion_of_significant_columns  \n",
-       "0                               0.34  \n",
-       "1                               0.52  \n",
-       "2                               0.56  \n",
-       "3                               0.63  \n",
-       "4                               0.68  \n",
-       "5                               0.67  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sig_groupsdf"
    ]
   }
  ],
