Changed the data path and added review changes

--- a/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
+++ b/0.data_analysis/plates_1_2_sig_test_nf1_sc_all_cellprofiler.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65c78536-b04a-4c75-b393-42272b5d894b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Obnibius Testing: https://www.statology.org/omnibus-test/\n",
+    "\n",
+    "Post hoc Testins: https://www.statology.org/anova-post-hoc-tests/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32d3539f-2814-4db0-afe6-98c4685d86d6",
    "metadata": {},
    "source": [
@@ -35,12 +47,13 @@
    ],
    "source": [
     "import sys\n",
-    "from sklearn.ensemble import IsolationForest\n",
-    "import scikit_posthocs as sp\n",
+    "from collections import defaultdict\n",
     "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from collections import defaultdict\n",
+    "import scikit_posthocs as sp\n",
+    "from sklearn.ensemble import IsolationForest\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
     "import analysis_utils as au\n",
@@ -56,8 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "rnd_val = 0 # Random value for all seeds\n",
-    "rng = np.random.default_rng(seed=rnd_val) # random number generator"
+    "rnd_val = 0  # Random value for all seeds\n",
+    "rng = np.random.default_rng(seed=rnd_val)  # random number generator"
    ]
   },
   {
@@ -69,59 +82,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cad6f25-2298-4d3e-b4a5-acdba56ee6dc",
+   "metadata": {},
+   "source": [
+    "## Remove Outliers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff07e65a-3c7b-4495-a49c-ebbb8683843a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis\n"
-     ]
-    }
-   ],
+   "id": "c00fd174-2abc-4feb-999f-15a9b094296d",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "current_dir = Path.cwd()\n",
-    "print(current_dir)"
+    "plates = {}\n",
+    "\n",
+    "plates[\"1\"] = {\n",
+    "    \"path\": \"../nf1_painting_repo/3.processing_features/data/feature_selected_data/Plate_1_sc_norm_fs.parquet\"\n",
+    "}\n",
+    "plates[\"2\"] = {\n",
+    "    \"path\": \"../nf1_painting_repo/3.processing_features/data/feature_selected_data/Plate_2_sc_norm_fs.parquet\"\n",
+    "}\n",
+    "\n",
+    "for plate, vals in plates.items():\n",
+    "    # Initializes the preprocessing class\n",
+    "    po = ppu.Preprocess_data(path=vals[\"path\"])\n",
+    "\n",
+    "    # Gets the dataframe after removing metadata columns,\n",
+    "    # except for the 'Metadata_genotype' column specified above\n",
+    "    platedf = po.remove_meta(po.df, kept_meta_columns=[\"Metadata_genotype\"])\n",
+    "\n",
+    "    # Use isolation forest to select inliers:\n",
+    "    isof = IsolationForest(random_state=rnd_val)\n",
+    "    out_preds = isof.fit_predict(platedf.drop(columns=[\"Metadata_genotype\"]))\n",
+    "    ind = np.nonzero(out_preds == 1)[0]  # Select inliers\n",
+    "\n",
+    "    # Select inlier samples:\n",
+    "    plates[plate][\"df\"] = platedf.iloc[ind]\n",
+    "\n",
+    "platesdf = [plates[key][\"df\"] for key in plates]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c00fd174-2abc-4feb-999f-15a9b094296d",
+   "id": "fa2a0e76-1a05-4049-bb83-9b0818dedeb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'nf1_sc_all_cellprofiler.csv.gz'\n",
-    "base_path = Path(\"../nf1_benchmark_repo/4_processing_features/data\")\n",
-    "ending_path = Path(\"CellProfiler/nf1_sc_all_cellprofiler.csv.gz\")\n",
-    "\n",
-    "plates = {}\n",
-    "\n",
-    "plates['1'], plates['2'] = {\"path\": base_path / \"Plate1\" / ending_path}, {\"path\": base_path / \"Plate2\" / ending_path}\n",
-    "\n",
-    "for plate, vals in plates.items():\n",
-    "    # Initializes the preprocessing class\n",
-    "    po = ppu.Preprocess_data(path=vals['path'])\n",
-    "    \n",
-    "    # Gets the dataframe after removing metadata columns, \n",
-    "    # except for the 'Metadata_genotype' column specified above\n",
-    "    platedf = po.remove_meta(po.df, kept_meta_columns=['Metadata_genotype'])\n",
-    "    platedf.drop(['Cytoplasm_Number_Object_Number'], axis=1, inplace=True)\n",
-    "    \n",
-    "    # Use isolation forest to select inliers:\n",
-    "    isof = IsolationForest(random_state = rnd_val) \n",
-    "    out_preds = isof.fit_predict(platedf.drop(columns=['Metadata_genotype']))\n",
-    "    ind = np.nonzero(out_preds == 1)[0] # Select inliers\n",
-    "    \n",
-    "    # Select inlier samples:\n",
-    "    plates[plate]['df'] = platedf.iloc[ind]\n",
-    "    \n",
-    "platesdf = [plates[key]['df'] for key in plates]"
+    "### Use only the common columns between both plates:\n",
+    "common_columns = list(platesdf[0].columns.intersection(platesdf[1].columns))\n",
+    "platesdf[0] = platesdf[0].loc[:, common_columns]\n",
+    "platesdf[1] = platesdf[1].loc[:, common_columns]"
    ]
   },
   {
@@ -139,39 +152,11 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/camo/anaconda3/envs/nf1_analysis/lib/python3.9/site-packages/scipy/stats/_stats_py.py:3895: ConstantInputWarning: Each of the input arrays is constant;the F statistic is not defined or infinite\n",
-      "  warnings.warn(stats.ConstantInputWarning(msg))\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:178: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['plate'] = [str(i+1)]*len(df)\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:179: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['group'] = df['Metadata_genotype'] + df['plate']\n",
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/../utils/analysis_utils.py:180: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(columns=['Metadata_genotype','plate'], inplace=True) # Remove unnecessary columns for testing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#gtypes = ['Null','WT'] # The 2 types of genotypes\n",
     "test = sp.posthoc_scheffe\n",
     "# Pass the plates dataframes in order, so that genotypes are suffixed corretly (eg. WT1WT2)\n",
     "# Plates are 1 indexed\n",
-    "# res_test = au.sig_test(test, platesdf)\n",
     "st = au.Sig_testing(platesdf)\n",
     "anova_feats, sig_anova_pvals = st.anova_test()\n",
     "res_test = st.posthoc_test(anova_feats, sig_anova_pvals, test)"
@@ -188,7 +173,7 @@
    "source": [
     "# Returns a dictionary of genotype pairs containing the significant column names\n",
     "# being analyzed\n",
-    "sig_groups = st.get_columns(res_test['sig_feat_phoc'])"
+    "sig_groups = st.get_columns(res_test[\"sig_feat_phoc\"])"
    ]
   },
   {
@@ -201,10 +186,14 @@
    "outputs": [],
    "source": [
     "tot_columns = len(platesdf[0].columns)\n",
-    "sig_groupsdf = pd.DataFrame(list({grp: len(tot) for grp, tot in sig_groups.items()}.items()),\n",
-    "                            columns=['genotype', 'number_of_significant_columns'])\n",
-    "sig_groupsdf['proportion_of_significant_columns'] = sig_groupsdf['number_of_significant_columns'] / tot_columns\n",
-    "sig_groupsdf = sig_groupsdf.round({'proportion_of_significant_columns': 2})"
+    "sig_groupsdf = pd.DataFrame(\n",
+    "    list({grp: len(tot) for grp, tot in sig_groups.items()}.items()),\n",
+    "    columns=[\"genotype\", \"number_of_significant_columns\"],\n",
+    ")\n",
+    "sig_groupsdf[\"proportion_of_significant_columns\"] = (\n",
+    "    sig_groupsdf[\"number_of_significant_columns\"] / tot_columns\n",
+    ")\n",
+    "sig_groupsdf = sig_groupsdf.round({\"proportion_of_significant_columns\": 2})"
    ]
   },
   {
@@ -216,12 +205,12 @@
    },
    "outputs": [],
    "source": [
-    "out_file = Path('data/plate_1_2_genotype_signifance.tsv')\n",
+    "out_file = Path(\"data/plate_1_2_genotype_signifance.tsv\")\n",
     "\n",
     "if not out_file.parent.is_dir():\n",
     "    out_file.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "sig_groupsdf.to_csv(out_file, sep='\\t', index=False)"
+    "sig_groupsdf.to_csv(out_file, sep=\"\\t\", index=False)"
    ]
   }
  ],
