Reverted model changes

--- a/1.train_models/train_lr_plate3_cp_fs_data.ipynb
+++ b/1.train_models/train_lr_plate3_cp_fs_data.ipynb
@@ -289,11 +289,7 @@
    },
    "source": [
     "lr = LogisticRegression(\n",
-    "    max_iter=1000,\n",
-    "    solver=\"sag\",\n",
-    "    multi_class=\"multinomial\",\n",
-    "    random_state=rnd_val,\n",
-    "    n_jobs=-1,\n",
+    "    max_iter=1000, solver=\"sag\", multi_class=\"ovr\", random_state=rnd_val, n_jobs=-1\n",
     ")\n",
     "lr.fit(X=traindf.drop(\"label\", axis=\"columns\"), y=traindf[\"label\"])"
    ],
@@ -307,7 +303,7 @@
      "output_type": "execute_result",
      "execution_count": 1,
      "data": {
-      "text/plain": "LogisticRegression(max_iter=1000, multi_class='multinomial', n_jobs=-1,\n                   random_state=0, solver='sag')"
+      "text/plain": "LogisticRegression(max_iter=1000, multi_class='ovr', n_jobs=-1, random_state=0,\n                   solver='sag')"
      },
      "metadata": {}
     }
