Refactored code and saved intermediate feature data

--- a/2.evaluate_models/feature_selection/avg_lr_plate3_cp_fs_data.ipynb
+++ b/2.evaluate_models/feature_selection/avg_lr_plate3_cp_fs_data.ipynb
@@ -82,10 +82,14 @@
     "jukit_cell_id": "SrlRn60Pna"
    },
    "source": [
-    "out_path = Path(\"feature_importance_figures\")\n",
+    "fig_out_path = Path(\"feature_importance_figures\")\n",
+    "data_path = Path(\"data\")\n",
     "\n",
-    "if not out_path.exists():\n",
-    "    out_path.mkdir()"
+    "if not fig_out_path.exists():\n",
+    "    fig_out_path.mkdir()\n",
+    "\n",
+    "if not data_path.exists():\n",
+    "    data_path.mkdir()"
    ],
    "outputs": [],
    "execution_count": null
@@ -240,7 +244,7 @@
     "cbar = ax.collections[0].colorbar\n",
     "cbar.set_label(\"Number of Single Cells\")\n",
     "plt.title(\"Performance predicting Genotype\")\n",
-    "plt.savefig(f\"{out_path}/lr_conf_mat.png\")"
+    "plt.savefig(f\"{fig_out_path}/lr_conf_mat.png\")"
    ],
    "outputs": [
     {
@@ -378,9 +382,11 @@
     "        & (featimp[genotype][\"featdf\"] <= upper_bound)\n",
     "    ]\n",
     "\n",
-    "    featimp[genotype][\"featnorm_avg\"] = featimp[genotype][\"featdf\"][\n",
+    "    featimp[genotype][\"featdf\"] = featimp[genotype][\"featdf\"][\n",
     "        featimp[genotype][\"featdf\"] > 0\n",
-    "    ].mean()  # Calculate the mean of samples that contributed to the correct prediction\n",
+    "    ]\n",
+    "\n",
+    "    featimp[genotype][\"featnorm_avg\"] = featimp[genotype][\"featdf\"].mean()\n",
     "    featimp[genotype][\"featnorm_avg\"].dropna(inplace=True)\n",
     "    featimp[genotype][\"featnorm_avg_norm\"] = (\n",
     "        featimp[genotype][\"featnorm_avg\"] / featimp[genotype][\"featnorm_avg\"].sum()\n",
@@ -418,12 +424,43 @@
     "    .index.intersection(featimp[\"Null\"][\"featnorm_avg\"].index)\n",
     "    .intersection(featimp[\"WT\"][\"featnorm_avg\"].index)\n",
     ")\n",
-    "for idx in common_indices:\n",
-    "    totfeatimp[idx] = (\n",
-    "        featimp[\"HET\"][\"featnorm_avg\"][idx]\n",
-    "        + featimp[\"Null\"][\"featnorm_avg\"][idx]\n",
-    "        + featimp[\"WT\"][\"featnorm_avg\"][idx]\n",
-    "    ) / 3"
+    "\n",
+    "avgfeatimpdf = pd.DataFrame(common_indices.tolist(), columns=[\"Features\"])\n",
+    "featimpdf = pd.DataFrame([])\n",
+    "\n",
+    "for genotype in pos_genes:\n",
+    "    avgfeatimpdf = pd.merge(\n",
+    "        avgfeatimpdf,\n",
+    "        pd.DataFrame(\n",
+    "            list(featimp[genotype][\"featnorm_avg\"].items()),\n",
+    "            columns=[\"Features\", genotype],\n",
+    "        ),\n",
+    "        on=\"Features\",\n",
+    "        how=\"inner\",\n",
+    "    )\n",
+    "    featimp[genotype][\"featdf\"][\"genotype\"] = [genotype] * len(\n",
+    "        featimp[genotype][\"featdf\"]\n",
+    "    )\n",
+    "    featimpdf = pd.concat([featimpdf, featimp[genotype][\"featdf\"]], axis=0)\n",
+    "\n",
+    "avgfeatimpdf[\"Overall\"] = (\n",
+    "    avgfeatimpdf[pos_genes[0]] + avgfeatimpdf[pos_genes[1]] + avgfeatimpdf[pos_genes[2]]\n",
+    ")\n",
+    "avgfeatimpdf[\"Overall\"] = avgfeatimpdf[\"Overall\"] / 3"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "jukit_cell_id": "0Fd80yruid"
+   },
+   "source": [
+    "featimpdf.to_csv(data_path / \"feature_importances.tsv\", sep=\"\\t\", index=False)\n",
+    "avgfeatimpdf.to_csv(\n",
+    "    data_path / \"avg_norm_feature_importances.tsv\", sep=\"\\t\", index=False\n",
+    ")"
    ],
    "outputs": [],
    "execution_count": null
@@ -443,7 +480,7 @@
     "jukit_cell_id": "5qAGiBS91j"
    },
    "source": [
-    "totfeatimp = pd.Series(totfeatimp)\n",
+    "totfeatimp = pd.Series(avgfeatimpdf[\"Overall\"].values, index=avgfeatimpdf[\"Features\"])\n",
     "\n",
     "min_val = totfeatimp.min()\n",
     "max_val = totfeatimp.max()\n",
@@ -483,7 +520,7 @@
     "plt.xlabel(f\"Top {disp_feat} features\")\n",
     "plt.title(f\"Best features for {gtype}\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{out_path}/{gtype}_feature_importances_by_weight\")"
+    "plt.savefig(f\"{fig_out_path}/{gtype}_feature_importances_by_weight\")"
    ],
    "outputs": [
     {
@@ -517,7 +554,7 @@
     "    plt.xlabel(f\"Top {disp_feat} features\")\n",
     "    plt.title(f\"Best features for {genotype}\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\"{out_path}/{genotype}_average_feature_importances.png\")"
+    "    plt.savefig(f\"{fig_out_path}/{genotype}_average_feature_importances.png\")"
    ],
    "outputs": [
     {
@@ -588,7 +625,7 @@
     "plt.xlabel(f\"Top {disp_feat} features\")\n",
     "plt.tight_layout()\n",
     "plt.legend(loc=\"upper center\")\n",
-    "plt.savefig(f\"{out_path}/collective_average_feature_importances.png\")"
+    "plt.savefig(f\"{fig_out_path}/collective_average_feature_importances.png\")"
    ],
    "outputs": [
     {
